# VulkanTemplateProject

./: .gitignore  CMakeLists.txt  CMakePresets.json  HelloTriangleApplication.cpp  README.md  Template-CMakeUserPresets.json  vcpkg-configuration.json  vcpkg.json
